--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,23 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
 *.local
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.production
+.env.*
+!.env.example
+.env.development.local
+.env.test.local
+.env.production.local
+!.env.example
 
 # Editor directories and files
 .vscode/*
